Added version 0.1 downloads

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@ early alpha, basically it's just one level dungeon walking simulator. Hopefully 
 <a id="releases" class="anchor" href="#releases" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Releases</h3>
 
 <p>Releases to download</p>
-<p> Windows .exe file: </p>
-<p> Other systems (requires <a href="https://www.love2d.org/">löve 2D</a> installed): </p>
+<p> Windows .exe file: <a href="http://is.muni.cz/www/373865/Strength_and_Sorcery.zip">Download</a></p>
+<p> Just unpack and run Strength_and_Sorcery.exe </p>
+<p> Other systems (requires <a href="https://www.love2d.org/">löve 2D</a> installed): <a href="http://is.muni.cz/www/373865/Strength_and_Sorcery.love">Download</a></p>
+<p> Run using Löve 2D game engine </p>
       </section>
 
       <footer>
